--- a/src/main/resources/static/corp/jobPosting/myJobPostingListPage.css
+++ b/src/main/resources/static/corp/jobPosting/myJobPostingListPage.css
@@ -28,7 +28,6 @@
     cursor: pointer;
     padding: 15px;
     font-weight: 600;
-    background-color: #f8f9fa;
     border: 1px solid #dee2e6;
     transition: background-color 0.3s;
 }
@@ -264,4 +263,19 @@
   display: table-cell;
   text-align: center;         /* 가로 정렬 */
   vertical-align: middle;     /* 세로 정렬 */
+}
+
+/* 전체, 진행중, 마감 버튼 색상 변경  */
+.posting-status.selected { 
+	background-color: #b7bdc7;
+}
+/* 공고 제목 줄임 */
+.detail-posting-link {
+	cursor: pointer;
+	display: inline-block;      /* inline 요소에 width 적용 위해 */
+	max-width: 180px;           /* 원하는 최대 너비 지정 */
+	white-space: nowrap;        /* 줄 바꿈 방지 */
+	overflow: hidden;           /* 넘치는 부분 숨김 */
+	text-overflow: ellipsis;    /* ... 처리 */
+	vertical-align: middle;     /* 줄맞춤 보정 */
 }
