--- a/src/main/resources/templates/corp/jobPosting/myJobPostingListPage.html
+++ b/src/main/resources/templates/corp/jobPosting/myJobPostingListPage.html
@@ -25,15 +25,21 @@ document.addEventListener('DOMContentLoaded', () => {
 	let userCorpNo = document.querySelector('#userCorpNo').value;
 	let userInfo = document.querySelector('#userInfo').dataset.user;
 
-	//첫 화면 데이터 비동기 가져오기 (매개변수 넣는거 까먹지마) 
+	//데이터 비동기 가져오기 (매개변수 넣는거 까먹지마) 
 	fetchStartData(userCorpNo);
+
+	//진행중, 마감, 전체버튼을 눌렀을 때 클래스 제거 및 추가
+	changeClassSelectedTotd(userCorpNo);
+	
+	//
 	
 });//ready
 
 
 //지원자 관리 모달창
 function openApplicantListModal(){
-	alert('지원자 관리 모달창 열림');
+	alert('지원자 관리 모달창 열림 대신에 페이지 이동으로 처리, 추후 모달창으로 간략 조회 기능구현할 것 ');
+	location.href="/corp/applicant";
 }
 
 //처음화면 자료 뿌리기(진행중, 전체)
@@ -62,35 +68,189 @@ function fetchStartData(userCorpNo){
 	})
 }
 
+//진행중, 마감, 전체 클릭에 따라 클래스 추가 그리고 비동기로 조회 목록 가져오기 
+function changeClassSelectedTotd(userCorpNo){
+	document.querySelectorAll('.posting-status').forEach(td => {
+		//초기값 동기적으로 부여 
+		/* if(td.classList.contains('selected')){
+		}; */
+		td.addEventListener('click', () => {
+			//기존에 선택된 td에서 클래스 제거 
+			document.querySelectorAll('.posting-status').forEach(item => {
+				item.classList.remove('selected');
+			});
+			//그러고 나서 클릭된 td에만 클래스 추가할거 
+			td.classList.add('selected');
+			
+			//비동기로 해당 버튼에 맞는 데이터 리스트 가져오기(진행중ing, 마감end, 전체total) & 전체(공고최신순)
+			//console.log(typeof userCorpNo); //String 이라서 number로 바꿔줘야 
+			let corpNo = Number(userCorpNo); 
+			let orderBy = "start"; //정률순은 고정 
+			let postSts = "";
+			if(td.id == 'getIngPosting'){
+				postSts = "ing";
+			} else if (td.id == 'getEndPosting'){
+				postSts = "end";
+			} else if (td.id == 'getAllPosting'){
+				postSts = "total";
+			}
+			let url = `/corp/postings/selectby/${corpNo}/${postSts}/${orderBy}`;
+			fetch(url, {
+				method : 'GET',
+			})
+			.then(response => {
+				if(!response){
+					throw new Error('조회 요청 실패');
+				}
+				return response.json(); //밑에서DOM다시 해야하니까 JSON으로, (.text() xxx)
+			})
+			.then(data => {
+				console.log(data);
+                updatePostingTable(data.postList);
+                updatePostingCounts(data);
+			})
+			.catch(error => {
+				
+				console.error(error);
+			})
+		});
+	});
+	
+	
+	
+	
+}
 
-//진행중 버튼 누르면 진행중인 공고만 가져와 뿌리기
-function getProcessingPosting(){
-	
+//상단에 공고 n개씩 보기 설정
+function selectPostingByCnt(){
+	alert('미구현');
 }
-//마감 버튼을 누르면 마감된 공고만 가져와 뿌리기 (마감된 공고는 공고관리 > 연장,마감 버튼, 인재추천 비활성화)
-function getEndPosting(){
-	
-}
-//전체 버튼 누르면 전체 공고를 가져와 뿌리기
-function getAllPosting(){
-	
-}
-
 //전체(최신등록순) 정렬
 function orderByStartDate(){
-	
+	alert('미구현');
 }
 //마감일순 정렬 
 function orderByEndDate(){
-	
+	alert('미구현');
 }
 //조회수순 정렬
 function orderByViewCnt(){
-	
+	alert('미구현');
 }
 
+//수정 버튼 클릭
+function updatePosting(jobPostingSeq){
+	if(confirm(jobPostingSeq + '번 공고를 수정하시겠습니까?')){
+		location.href=`/corp/postings/updateForm/${jobPostingSeq}`;
+	}
+}
 
+//마감 버튼 클릭 (한번 RESTful API 호출방법으로 해볼까?)
+function finishPosting(jobPostingSeq){
+	if(confirm('해당 공고를 조기 마감하시겠습니까?')){
+		let url = `/corp/postings/${jobPostingSeq}`;
+		fetch(url, {
+			method: 'DELETE',
+		})
+		.then(response => {
+			if(!response.ok){
+				throw new Error('요청 실패');
+			} else {
+				return response.text();
+			}
+		})
+		.then(result => {
+			alert(result);
+			location.href="/corp/myJobPostingListPage";
+		})
+		.catch(error => {
+			alert('공고 조기마감 처리 실패');
+			console.error(error);
+		})
+	}
+	return false;
+}
 
+//지원자 통계 버튼 클릭
+function getApplicantStats(jobPostingSeq){
+	alert(jobPostingSeq +'번 공고의 지원자 통계 조회 : 현재 미구현');
+}
+
+//공고 상세보기 (유저페이지로 이동)
+function getDetailPostingInfo(jobPostingSeq){
+	location.href=`/user/job_posting/job_posting_detail?jobPostingSeq=${jobPostingSeq}`;
+}
+
+//DOM 비동기 처리(전체, 진행중, 마감)
+function updatePostingTable(postList) {
+    const tbody = document.querySelector('#resultData');
+    tbody.innerHTML = ''; // 초기화 
+    
+    if (!postList || postList.length === 0) {
+        const trEmpty = document.createElement('tr');
+        trEmpty.innerHTML = `<td colspan='5' style="text-align: center;">조회 목록이 존재하지 않습니다. 새로운 공고를 등록해보세요!</td>`;
+        tbody.appendChild(trEmpty);
+    } else {
+	    postList.forEach(post => {
+	        const tr = document.createElement('tr');
+	        tr.innerHTML = `
+	            <td class="posting-box-need-center">${post.isEnded == 'N' ? '진행 중' : '공고 마감'}</td>
+	            <td>
+	                <a><span id="jobPosting-${post.jobPostingSeq}" class="detail-posting-link" onclick="getDetailPostingInfo(${post.jobPostingSeq})">${post.postingTitle}</span></a>
+	                <ul>
+	                    <li>근무형태 : <span>${post.employType}</span></li>
+	                    <li>포지션 : <span>${post.positionName}</span></li>
+	                    <li>경력 : <span>${post.expLevel}</span></li>
+	                    <li>접수기간 : <span>${post.postingStartDt}</span> ~ <span>${post.postingEndDt}</span></li>
+	                    <li>조회수 : <span>${post.viewCnt} </span></li>
+	                </ul>
+	            </td>`;
+	            let nOrY = '';
+	            if(post.isEnded == 'N'){
+	            	nOrY = `
+		            <td class="posting-box-need-center">
+		                <button type="button" onclick="updatePosting(${post.jobPostingSeq})">수정</button>
+		                <button type="button" onclick="finishPosting(${post.jobPostingSeq})">마감</button>
+		            </td>`;
+	            }
+	            if(post.isEnded == 'Y'){
+	            	nOrY =`
+					<td class="posting-box-need-center">
+						<button type="button" style='background-color:grey;' disabled>수정 </button>
+						<button type="button" style='background-color:grey;' disabled>마감 </button>
+					</td>`;
+	            }
+	            tr.innerHTML += nOrY;
+	            tr.innerHTML += `
+	            <td class="posting-box-need-center">
+	                <div><a style="cursor: pointer; text-decoration: underline;" onclick="openApplicantListModal()"><span>${post.appCnt}</span></a></div>
+	                <div style="color: black; cursor: pointer;" onclick="openApplicantListModal()">지원자 관리 <i class="bi bi-file-earmark-ruled"></i></div>
+	                <div><input type="button" value="지원자 통계" onclick="getApplicantStats(${post.jobPostingSeq})"></div>
+	            </td>
+	            <td class="posting-box-need-center">
+	                <button type="button">확인</button>
+	            </td>
+	        	`;
+	        tbody.appendChild(tr);
+	    });
+   	}
+}
+
+//건수 업데이트
+function updatePostingCounts(data) {
+    if (data.postCnt) {
+        const counts = data.postCnt[0];
+
+        const ingTh = document.querySelector('#getIngPosting');
+        if (ingTh) ingTh.innerHTML = `진행중 (<span>${counts.ING_POSTING_CNT || 0}</span>)건`;
+
+        const endTh = document.querySelector('#getEndPosting');
+        if (endTh) endTh.innerHTML = `마감 (<span>${counts.END_POSTING_CNT || 0}</span>)건`;
+
+        const totalTh = document.querySelector('#getAllPosting');
+        if (totalTh) totalTh.innerHTML = `전체 (<span>${counts.TOTAL_POSTING_CNT || 0}</span>)건`;
+    }
+}
 
 </script>
 </head>
@@ -103,9 +263,9 @@ function orderByViewCnt(){
 			<div> <!-- 테이블 -->
 				<table class="table table-bordered"> 
 					<tr>
-						<th id="getIngPosting">진행중 (<span th:text="${postCntMapList[0].ING_POSTING_CNT}"></span>)건 </th>
-						<th id="getEndPosting">마감 (<span th:text="${postCntMapList[0].END_POSTING_CNT}"></span>)건 </th>
-						<th id="getAllPosting">전체 (<span th:text="${postCntMapList[0].TOTAL_POSTING_CNT}"></span>)건 </th>
+						<th id="getIngPosting" class="posting-status selected">진행중 (<span th:text="${postCntMapList[0].ING_POSTING_CNT ?: 0}"></span>)건 </th>
+						<th id="getEndPosting" class="posting-status">마감 (<span th:text="${postCntMapList[0].END_POSTING_CNT ?: 0}"></span>)건 </th>
+						<th id="getAllPosting" class="posting-status">전체 (<span th:text="${postCntMapList[0].TOTAL_POSTING_CNT ?: 0}"></span>)건 </th>
 					</tr>
 				</table>
 			</div>
@@ -117,29 +277,19 @@ function orderByViewCnt(){
 		<div class="get-posting-orderby"> <!-- 상단의 정렬 순서 -->
 			<div> 
 				<!-- 전체는 최신 등록순 -->
-				<input type="button" value="전체" id="orderByStartDate"> |
-				<input type="button" value="마감일순" id="orderByEndDate"> |
-				<input  type="button"value="조회수순" id="orderByViewCnt">
+				<input type="button" value="전체" id="orderByStartDate" th:onclick="orderByStartDate()"> |
+				<input type="button" value="마감일순" id="orderByEndDate" th:onclick="orderByEndDate()"> |
+				<input  type="button"value="조회수순" id="orderByViewCnt" th:onclick="orderByViewCnt()">
 			</div>
 		</div>
 	</div> <!-- 상단 끝 -->
-	<ul th:each="post : ${postList}">
-		<li th:text="${post}"></li>
-		<li th:text="${post.postingEndDt}"></li>
-		<!-- <li th:text="${#temporals.format(post.postingEndDt, 'yyyy.MM.dd')}"></li> -->
-	</ul>
-	<div th:text="${#dates.createNow()}"></div>
-	<div th:text="${#dates.createToday()}"></div>
-	
-	
-	
 	<div class="bottom-start-container"> <!-- 하단 시작 -->
 		<div class="bottom-select-box"> <!-- 하단에 '일반 채용공고' 글자, 정렬 기준 셀렉션 -->
 			<div>
 				<p>➡️일반 채용공고</p>
 			</div>
 			<div>
-				<select>
+				<select id="selectCnt" th:onchange="selectPostingByCnt()">
 					<option selected>5개씩보기</option>
 					<option>10개씩보기</option>
 					<option>20개씩보기</option>
@@ -157,26 +307,35 @@ function orderByViewCnt(){
 						<th style="color: #f53600">AI인재추천</th>
 					</tr>
 				</thead>
-				<tbody id="resultData" th:each="post : ${postList}">
-					<tr>
-						<td class="posting-box-need-center">채용 마감</td>
+				<tbody id="resultData" >
+					<tr th:if="${#lists.isEmpty(postList) }">
+						<td colspan="5" style="text-align: center;">조회 목록이 존재하지 않습니다. 새로운 공고를 등록해보세요!</td>
+					</tr>
+				
+					<tr th:each="post : ${postList}">
+						<td class="posting-box-need-center" th:text="${post.isEnded == 'N' ? '진행 중' : '공고 마감'}"></td>
 						<td>
-							<a><span>테스트 채용공고 02. 입사지원하..</span></a>
+							<a><span id="jobPosting-${jobPostingSeq}"  class="detail-posting-link" th:text="${post.postingTitle}" th:onclick="'getDetailPostingInfo('+ ${post.jobPostingSeq} +')'"></span></a>
 							<ul>
-								<li>근무형태 : <span>정규직</span> </li>
-								<li>포지션 : <span>백엔드</span> </li>
-								<li>경력 : <span>무관</span> </li>
-								<li>접수기간 : <span>25/07/10</span> ~ <span>25/08/10</span> </li>
+								<li>근무형태 : <span th:text="${post.employType}"></span> </li>
+								<li>포지션 : <span th:text="${post.positionName}"></span> </li>
+								<li>경력 : <span th:text="${post.expLevel}"></span> </li>
+								<li>접수기간 : <span th:text="${post.postingStartDt}"></span> ~ <span th:text="${post.postingEndDt}"></span> </li>
+								<li>조회수 : <span th:text="${post.viewCnt}"></span></span> </li>
 							</ul>
 						</td>
-						<td class="posting-box-need-center">
-							<button type="button" >연장 </button>
-							<button type="button" >마감 </button>
+						<td class="posting-box-need-center" th:if="${post.isEnded == 'N'}">
+							<button type="button" th:onclick="'updatePosting(' + ${post.jobPostingSeq} + ')'">수정 </button>
+							<button type="button" th:onclick="'finishPosting(' + ${post.jobPostingSeq} + ')'">마감 </button>
+						</td>
+						<td class="posting-box-need-center" th:if="${post.isEnded == 'Y'}">
+							<button type="button" readonly>수정 </button>
+							<button type="button" readonly>마감 </button>
 						</td>
 						<td class="posting-box-need-center">
-							<div><a style="cursor: pointer; text-decoration: underline;" onclick="openApplicantListModal()"> 3명</a></div>
-							<div style="color: black; cursor: pointer;" onclick="openApplicantListModal()"> 지원자 관리 <i class="bi bi-file-earmark-ruled"></i></div>
-							<div> <input type="button" value="지원자 통계"> </div>
+							<div><a style="cursor: pointer; text-decoration: underline;" th:onclick="openApplicantListModal()"><span th:text="${post.appCnt}"></span> </a></div>
+							<div style="color: black; cursor: pointer;" th:onclick="openApplicantListModal()"> 지원자 관리 <i class="bi bi-file-earmark-ruled"></i></div>
+							<div> <input type="button" value="지원자 통계" th:onclick="'getApplicantStats(' + ${post.jobPostingSeq} + ')'"> </div>
 						</td>
 						<td class="posting-box-need-center">
 							<button type="button">확인</button>
@@ -192,8 +351,6 @@ function orderByViewCnt(){
 	<div>
 	
 	</div>
-	
-	
 	<!-- 모달창 : 지원자 통계 -->
 	
 	
